# articles_searcher_agb

./: pyproject.toml
src/: .env  bot_data.xlsx  mail_watcher.py  main.py  products.db
